# embedded_linux

./: os_task.py
C++/pc_control/: CMakeLists.txt  README.md  Server_Handler.cpp
C++/pc_control/include/: Server_Handler.hpp
C++/session1_tasks/: IfVowel.cpp  ascii_table.cpp  binary_decimal.cpp  maxof3num.cpp  multiplication_table.cpp  sum_digits.cpp  triangle.cpp
C++/session2_tasks/: Arr_deleteNumber.cpp  Arr_findOddEven.cpp  Arr_merge.cpp  Arr_searchNumber.cpp  arr_FindMax.cpp  lambda_square.cpp
python/session1_tasks/: calendar.py  loginsystem.py
python/session2_tasks/: bitcoinRate.py  quick_task1.py
python/session3_tasks/: activity.py  favUrl.py  getlocation.py  install.py  openfav.py
python/session4_tasks/: ReadEmails.py  batteryMessage.py  commandLineArg.py  init_generate.py
python/session5_tasks/: client1.py  fact_gui.py  gauge.py  led_gui.py  server.py
session1_tasks/: area_task.py  check_vowel.py  count.py
